--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "json-server": "^0.17.3",
     "nodemon": "^3.1.10",
     "react": "^19.0.0",
